# file_server_challenge

./: .clickhouse.env  .docker.env  .env  .gitignore  .localstack.env  .tabix.env  Cargo.toml  README.md  docker-compose.yaml
client/: Cargo.toml
client/src/: file_manager.rs  lib.rs  main.rs
client/src/api_client/: errors.rs  mod.rs  models.rs  retryable.rs
client/src/commands/: helpers.rs  list_upload_ids.rs  mod.rs  upload_files.rs  verify_file.rs
docker/clickhouse/init/: schemas.sql
docker/localstack/init/: bucket.sh
lib/: Cargo.toml
lib/src/: custom_merkle.rs  lib.rs  models.rs
server/: Cargo.toml  Dockerfile
server/src/: apidoc.rs  errors.rs  lib.rs  main.rs  server.rs
server/src/handlers/: complete.rs  get_file.rs  get_proof.rs  initiate.rs  mod.rs  requests.rs  responses.rs  upload.rs
server/src/infrastructure/: authentication.rs  helpers.rs  mod.rs  tracing.rs
server/src/models/: mod.rs
server/src/repositories/: mod.rs
server/src/repositories/file_repository/: clickhouse.rs  in_memory.rs  mod.rs
server/src/repositories/file_storage/: in_memory.rs  mod.rs  s3.rs
server/src/services/: file_service.rs  mod.rs
server/tests/: integration_tests.rs  repository_tests.rs  storage_tests.rs
server/tests/helpers/: mocks.rs  mod.rs  web_server_simulator.rs
