[package]
name = "file_server_client"
authors = ["Facundo La Rocca <facu.larocca@gmail.com>"]
version = "1.0.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
urlencoding = "2.1.3"
async-trait = "0.1.89"
home = "0.5.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "fmt"] }
tracing-log = "0.2.0"
thiserror = "2.0.17"
tokio-retry = "0.3.0"

file_server_library = { path = "../lib" }

